2002-10-02  Kenneth Rohde Christiansen  <kenneth@gnu.org>

        * configure.in: Added da to ALL_LINGUAS.

2002-10-01  Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp, src/ldap_window.cpp, src/ldap_window.h:
	Rows in the GtkListStore where people are not available are greyed
	out.
	
2002-10-01  Damien Sandras  <dsandras@seconix.com>

	* lib/stock-icons.c, pixmaps/Makefile.am, src/tray.cpp: Fixed wrong,
	missing, or not needed stock icons names.

2002-10-01  Damien Sandras  <dsandras@seconix.com>

	* lib/stock-icons.c: Updated stock icons.

	* pixmaps/Makefile.am: Same.

	* pixmaps/available.png, pixmaps/occupied.png, 
	pixmaps/panel-available-16.png, pixmaps/panel-busy-16.png,
	pixmaps/panel-ring-16.png: Removed those unused stock icons.
	
	* pixmaps/status-available-16.png, pixmaps/status-occupied-16.png,
	pixmaps/status-ringing-16.png: Added those stock icons.
	
	* src/ils.cpp: Use the same stock icons as in the tray.
	
	* src/tray.cpp: Updated stock icons.

	
2002-10-01  Kenneth Rohde Christiansen  <kenneth@gnu.org>

	* src/ils.cpp (Main): Forgot to unref the pixbuf.

2002-10-01  Kenneth Rohde Christiansen  <kenneth@gnu.org>

	* src/ils.cpp (Main): Use the GM stock icons, so it works with 
	theming. Fixes #92002.

	TreeView doesn't seem to have been made for stock icons, so I do 
	something similar to the stockrenderer in libegg.

	Fabrice has confirmed that everything works as it should, and that
	it is quite faster on displaying things when they have been
	fetched from the ILS servers - long live the stock icon cache.

2002-09-30  Kenneth Christiansen <kenneth@gnu.org>

	* lib/dialog.c:
	* po/da.po:
	* po/POTFILES.in:
	Fixes the translation bug Damien mentioned on IRC today.

2002-09-29  Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: The listening port of GM is now registered to ILS. That
	permits to have a unique callto:// URL even if the port is != 1720
	and changes.

	* src/urlhandler.cpp: port is now taken into account.
