@@ -1,3 +1,7 @@
+2002-10-02  Damien Sandras  <dsandras@seconix.com>
+
+	* src/main_window.cpp: Makes use of functions in sound_handling.h.
+	
 2002-10-02  Kenneth Rohde Christiansen  <kenneth@gnu.org>
 
         * configure.in: Added da to ALL_LINGUAS.
